--- a/README.textile
+++ b/README.textile
@@ -9,12 +9,14 @@ Best of all, there's a "detailed tutorial":https://github.com/fortuity/rails3-mo
 
 You can clone this app or generate a new Rails application using this app as a template.
 
-h2. Follow on Twitter
-
-To keep up to date with development of this app, follow the project on Twitter:
-"http://twitter.com/rails_apps":http://twitter.com/rails_apps.
-
 Any issues? Please create an "Issue":http://github.com/fortuity/rails3-mongoid-omniauth/issues on GitHub.
+
+h2. !http://twitter-badges.s3.amazonaws.com/t_logo-a.png(Follow on Twitter)!:http://www.twitter.com/rails_apps Follow on Twitter
+
+To keep up to date, follow the project on Twitter:
+"http://twitter.com/rails_apps":http://twitter.com/rails_apps
+
+Please tweet some praise if you like what you've found.
 
 h2. "Building It" Tutorial
 
@@ -46,15 +48,13 @@ This example app shows how to request an email address from the user when he or 
 
 h4. Similar Examples and Tutorials
 
-|_. OmniAuth Examples and/or Tutorials                    |_. |_. Authors |
-| "Simple OmniAuth":http://railscasts.com/episodes/241-simple-omniauth | screencast | Ryan Bates |
-| "OmniAuth Pure":http://www.communityguides.eu/articles/16 | example and tutorial for OmniAuth with multiple providers | Markus Proske |
-| "Devise and OmniAuth":http://www.communityguides.eu/articles/11 | example and tutorial for OmniAuth and Devise with multiple providers | Markus Proske |
-| "rails3-mongoid-devise-omniauth":https://github.com/fertapric/rails3-mongoid-devise-omniauth | example and tutorial for Devise and OmniAuth with Mongoid | Fernando Tapia Rico |
-
-|_. Devise Examples and/or Tutorials                    |_. |_. Authors |
-| "rails3-devise-rspec-cucumber":https://github.com/fortuity/rails3-devise-rspec-cucumber | example and tutorial for Devise with ActiveRecord | Daniel Kehoe |
-| "rails3-mongoid-devise":https://github.com/fortuity/rails3-mongoid-devise | example and tutorial for Devise with Mongoid | Daniel Kehoe |
+|_. Author |_. Example App |_. Comments |
+| Ryan Bates | "Simple OmniAuth":http://railscasts.com/episodes/241-simple-omniauth | screencast |
+| Markus Proske | "OmniAuth Pure":http://www.communityguides.eu/articles/16 | example and tutorial for OmniAuth with multiple providers |
+| Markus Proske | "Devise and OmniAuth":http://www.communityguides.eu/articles/11 | example and tutorial for OmniAuth and Devise with multiple providers |
+| Daniel Kehoe | "Devise, RSpec, Cucumber":https://github.com/fortuity/rails3-devise-rspec-cucumber | Detailed tutorial, app template, starter app, using SQLite |
+| Daniel Kehoe | "Devise, Mongoid":https://github.com/fortuity/rails3-mongoid-devise | Detailed tutorial, app template, starter app, using MongoDB |
+| Fernando Tapia Rico | "Devise, OmniAuth, Mongoid":https://github.com/fertapric/rails3-mongoid-devise-omniauth | With tutorial, using MongoDB |
 
 h2. Obtaining API Keys
 
