--- a/README.textile
+++ b/README.textile
@@ -13,7 +13,7 @@ Any issues? Please create a "GitHub issue":http://github.com/RailsApps/rails3-mo
 
 h2. !http://twitter-badges.s3.amazonaws.com/t_logo-a.png(Follow on Twitter)!:http://www.twitter.com/rails_apps Follow on Twitter !http://railsapps.github.com/images/mailing-list-icon.jpg(Join the Mailing List)!:http://eepurl.com/dQx3o Join the Mailing List
 
-Follow the project on Twitter: "http://twitter.com/rails_apps":http://twitter.com/rails_apps. Please tweet some praise if you like what you've found.
+Follow the project on Twitter: "rails_apps":http://twitter.com/rails_apps. Please tweet some praise if you like what you've found.
 
 <a href="http://eepurl.com/dQx3o">Join the email list</a> (low volume, announcements only) for project updates and my tips about Rails resources.
 
@@ -23,7 +23,7 @@ A complete walkthrough tutorial is available on the GitHub wiki:
 
 h4. "View the Tutorial":https://github.com/RailsApps/rails3-mongoid-omniauth/wiki/Tutorial
 
-The tutorial documents each step to follow to create the application. Every step is documented concisely, so a complete beginner can create this application without any additional knowledge. However, no explanation is offered for any of the steps, so if you are a beginner, you’re advised to look for an introduction to Rails elsewhere. See a list of "Rails books and online instruction":http://railsapps.github.com/rails-books.html for recommended reading.
+The tutorial documents each step to follow to create the application. Every step is documented concisely, so a complete beginner can create this application without any additional knowledge. However, no explanation is offered for any of the steps, so if you are a beginner, you’re advised to look for an introduction to Rails elsewhere. See a list of "recommended books and online resources for learning Rails":http://railsapps.github.com/best-recommended-learning-rails-books-resources.html.
 
 If you simply wish to modify the application for your own project, you can download the application and set it up as described below, without following the tutorial.
 
@@ -84,11 +84,7 @@ Before running this app, you need to install
 * Rails
 * A working installation of "MongoDB":http://www.mongodb.org/ (version 1.6.0 or newer)
 
-I recommend installing rvm, the "Ruby Version Manager":http://rvm.beginrescueend.com/, to manage multiple versions of Rails.
-
-Check that appropriate versions of Ruby and Rails are installed in your development environment:
-@$ ruby -v@
-@$ rails -v@
+See "Managing Rails Versions and Gems":http://railsapps.github.com/managing-rails-versions-gems.html for detailed instructions and advice.
 
 h4. Installing MongoDB
 
@@ -152,17 +148,19 @@ h4. About Required Gems
 
 The application uses the following gems. I recommend checking for newer versions of these gems before proceeding:
 
-* rails "(check rubygems.org for a newer gem)":http://rubygems.org/gems/rails
-* mongoid "(Check rubygems.org for a newer gem)":http://rubygems.org/gems/mongoid
-* bson_ext "(Check rubygems.org for a newer gem)":http://rubygems.org/gems/bson_ext
-* omniauth "(Check rubygems.org for a newer gem)":http://rubygems.org/gems/omniauth
-* rspec-rails "(Check rubygems.org for a newer gem)":http://rubygems.org/gems/rspec-rails
-* database_cleaner "(Check rubygems.org for a newer gem)":http://rubygems.org/gems/database_cleaner
-* factory_girl_rails "(Check rubygems.org for a newer gem)":http://rubygems.org/gems/factory_girl_rails
-* cucumber-rails "(Check rubygems.org for a newer gem)":http://rubygems.org/gems/cucumber-rails
-* capybara "(Check rubygems.org for a newer gem)":http://rubygems.org/gems/capybara
+* rails
+* mongoid
+* bson_ext
+* omniauth
+* rspec-rails
+* database_cleaner
+* factory_girl_rails
+* cucumber-rails
+* capybara
 
-The app has been tested with the indicated versions. If you are able to build the app with a newer gem, please create a "GitHub issue":http://github.com/RailsApps/rails3-mongoid-omniauth/issues. and I will update the app.
+See an example "Rails 3.1 Gemfile":http://railsapps.github.com/rails-3-1-example-gemfile.html.
+
+See "Managing Rails Versions and Gems":http://railsapps.github.com/managing-rails-versions-gems.html for advice and details.
 
 h4. Install the Required Gems
 
@@ -274,7 +272,7 @@ h2. Credits
 Daniel Kehoe ("http://danielkehoe.com/":http://danielkehoe.com/) implemented the application and wrote the tutorial.
 
 Is the app useful to you? Follow the project on Twitter:
-"http://twitter.com/rails_apps":http://twitter.com/rails_apps
+"rails_apps":http://twitter.com/rails_apps
 and tweet some praise. I'd love to know you were helped out by what I've put together.
 
 h2. License
