--- a/README.textile
+++ b/README.textile
@@ -80,7 +80,7 @@ h2. Dependencies
 
 Before running this app, you need to install 
 
-* The Ruby language (version 1.8.7 or 1.9.2)
+* The Ruby language (version 1.9.2)
 * Rails
 * A working installation of "MongoDB":http://www.mongodb.org/ (version 1.6.0 or newer)
 
