conform to app generated by template for Rails 3.1.1

--- a/README.textile
+++ b/README.textile
@@ -1,6 +1,6 @@
-h1. Rails 3 + Mongoid + Omniauth
+h1. Rails 3.1 + Mongoid + Omniauth
 
-This is an example *Rails 3 application* that combines *OmniAuth* with *Mongoid*. It uses the "OmniAuth":https://github.com/intridea/omniauth gem to manage authentication using a service provider such as Twitter or Facebook. MongoDB is used as a datastore with the "Mongoid":http://mongoid.org/ gem for quick development without schemas or migrations. 
+This is an example application for Rails 3.1.1 that combines OmniAuth with Mongoid. It uses the "OmniAuth":https://github.com/intridea/omniauth gem to manage authentication using a service provider such as Twitter or Facebook. MongoDB is used as a datastore with the "Mongoid":http://mongoid.org/ gem for quick development without schemas or migrations. 
 
 Best of all, there's a "detailed tutorial":https://github.com/RailsApps/rails3-mongoid-omniauth/wiki/Tutorial (walk-through) to show how it's built.
 
@@ -63,7 +63,7 @@ Before installing the application, you may wish to contact the service provider 
 
 h4. Twitter
 
-Visit "https://developer.twitter.com/apps/new":https://developer.twitter.com/apps/new to register your application. When you register your application, use the following values:
+Visit "https://dev.twitter.com/apps/new":https://dev.twitter.com/apps/new to register your application. When you register your application, use the following values:
 
 |_. Application Website                    |_. Callback URL |_. Notes |
 | http://example.com | http://127.0.0.1:3000/ | http://localhost:3000/ doesn't work |
@@ -82,7 +82,7 @@ Before running this app, you will need:
 
 * The Ruby language (version 1.9.2)
 ** @$ ruby -v@
-* Rails 3.1
+* Rails 3.1.1
 ** @$ rails -v@
 * Rake 0.9.2
 ** @$ rake --version@
@@ -120,29 +120,31 @@ You can use an application template to generate a new version of the example app
 
 Use the command:
 
-@$ rails new APP_NAME -m https://github.com/RailsApps/rails3-application-templates/raw/master/rails3-mongoid-omniauth-template.rb -T -O@
+@$ rails new myapp -m https://github.com/RailsApps/rails3-application-templates/raw/master/rails3-mongoid-omniauth-template.rb -T -O@
 
 Use the @-T -O@ flags to skip Test::Unit files and Active Record files. Add the @-J@ flag to skip Prototype files for Rails 3.0 (not needed for Rails 3.1).
 
 bq. You MUST be using Rails 3.0.4 or newer. Generating a Rails application from an “HTTPS” URL does not work in Rails 3.0.3 and earlier versions.
 
-This creates a new Rails app (with the @APP_NAME@ you provide) on your computer.
+This creates a new Rails app (with the name @myapp@) on your computer.
 
 The application generator template will ask you for your preferences:
 
-* Would you like to use jQuery instead of Prototype? (for Rails 3.0)
-* Would you like to use jQuery UI? (for Rails 3.0 or 3.1)
+* Would you like to use jQuery?
+* Would you like to use jQuery UI?
 * Would you like to use Haml instead of ERB?
 * Would you like to use RSpec instead of TestUnit?
 * Would you like to use factory_girl for test fixtures with RSpec?
 * Would you like to use Cucumber for your BDD?
+* Would you like to use Guard to automate your workflow?
 * Would you like to use Mongoid to connect to a MongoDB database?
 * Would you like to use OmniAuth for authentication?
 * Would you like to install HTML5 Boilerplate?
+* Normalize CSS and use Skeleton boilerplate?
 * Normalize CSS for consistent styling across browsers?
 * Completely reset all CSS to eliminate styling?
 * Would you like to set a robots.txt file to ban spiders?
-* Would you like to use 'rails-footnotes' during development?
+* Would you like to use ‘rails-footnotes’ during development?
 
 h4. Use "Recipes" to Customize an Application Template
 
@@ -168,7 +170,7 @@ The application uses the following gems:
 * "bson_ext":http://rubygems.org/gems/bson_ext
 * "omniauth":http://rubygems.org/gems/omniauth
 
-See an example "Rails 3.1 Gemfile":http://railsapps.github.com/rails-3-1-example-gemfile.html.
+See an example "Rails 3.1.1 Gemfile":http://railsapps.github.com/rails-3-1-1-example-gemfile.html.
 
 See "Managing Rails Versions and Gems":http://railsapps.github.com/managing-rails-versions-gems.html for advice and details.
 
