--- a/README.textile
+++ b/README.textile
@@ -102,7 +102,9 @@ h4. Downloading the Code
 
 If you simply wish to examine the example code, you can download the code ("clone the repository") with the command
 
-@$ git clone git://github.com/RailsApps/rails3-mongoid-omniauth.git@
+<pre>
+$ git clone git://github.com/RailsApps/rails3-mongoid-omniauth.git
+</pre>
 
 The source code is managed with Git (a version control system). You'll need Git on your machine (install it from "http://git-scm.com/":http://git-scm.com/).
 
@@ -112,7 +114,9 @@ You can use an application template to generate a new version of the example app
 
 Use the command:
 
-@$ rails new myapp -m https://github.com/RailsApps/rails3-application-templates/raw/master/rails3-mongoid-omniauth-template.rb -T -O@
+<pre>
+$ rails new myapp -m https://github.com/RailsApps/rails3-application-templates/raw/master/rails3-mongoid-omniauth-template.rb -T -O
+</pre>
 
 Use the @-T -O@ flags to skip Test::Unit files and Active Record files.
 
